# stm32_cmake_template

./: .gitignore  CMakeLists.txt  README.md
Drivers/: CMakeLists.txt
cmake/: g_tests.cmake  toolchain.cmake  utils.cmake
